
  * [Roland] Rewrote the setup_vars() function in install-ldap.sh for more
    robustness.
  * [Roland] Added manpage for sourceforge-config (fixes lintian error).
  * [Christian] Added ':' in /etc/nsswitch.conf
  * [Christian] Added do_config template
  * [Roland] Wrote the code behind the do_config debconf variable.
  * [Roland] Also, do not completely replace the existing configuration in
    /etc/nsswitch.conf.  Only add 'ldap' in there.

 -- Roland Mas <lolando@debian.org>  Thu, 21 Feb 2002 20:52:39 +0100

sourceforge (2.5-24) unstable; urgency=low

  * [Roland] Fixed a few errors (SQL syntax, queries on nonexistant
    tables) in project_metric.php.
  * [Roland] Marked the templates as conffiles (closes: #130239).

 -- Roland Mas <lolando@debian.org>  Thu, 14 Feb 2002 17:17:26 +0100

sourceforge (2.5-23) unstable; urgency=low

  * [Roland] Fixed the .../home/users/<user>.incoming bug (erroneous
    directories were created).
  * [Roland] Included documentation files per request (closes: #130219).

 -- Roland Mas <lolando@debian.org>  Mon, 28 Jan 2002 10:52:06 +0100

sourceforge (2.5-22) unstable; urgency=low

  * [Roland] Replaced a call to /etc/init.d/bind9 restart by a (more
    appropriate) reload.  Used the policy-defined invoke-rc.d, too.
  * [Roland] Fixed dependencies to correctly handle apache-ssl and
    exim-tls (closes: #128345).

 -- Roland Mas <lolando@debian.org>  Fri, 11 Jan 2002 11:05:03 +0100

sourceforge (2.5-21) unstable; urgency=low

  * [Roland] Delete temporary LDIF files created by cronjob (closes:
    #127636, #127641).

 -- Roland Mas <lolando@debian.org>  Fri,  4 Jan 2002 11:44:30 +0100

sourceforge (2.5-20) unstable; urgency=low

  * [Roland] Fixed thinko in 2.5-19.  I'll stop uploading things for
    today, sorry for the noise.

 -- Roland Mas <lolando@debian.org>  Fri, 28 Dec 2001 16:28:42 +0100

sourceforge (2.5-19) unstable; urgency=low

  * [Roland] user_home.php: Fixed email addresses on /users/<blah>.