@@ -88,11 +88,11 @@ install: build
 	#install utils/underworld-root/db_stats_site_nightly.pl $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/db_stats_site_nightly.pl
 	uudecode -o $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/www/images/sf-for-debian.png deb-specific/sf-for-debian.png.uu
 	uudecode -o $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/www/images/clear.gif deb-specific/clear.gif.uu
-	install -m 644 deb-specific/sf-httpd.conf.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/sf-httpd.secrets.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/local.inc.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/local.pl.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/database.inc.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
+	install -m 644 deb-specific/sf-httpd.conf.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/sf-httpd.secrets.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/local.inc.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/local.pl.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/database.inc.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
 	install -m 755 deb-specific/install-chroot.sh $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
 	install -m 755 deb-specific/install-exim.sh $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
 	install -m 755 deb-specific/db-upgrade.pl $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
